--- a/style.css
+++ b/style.css
@@ -11,17 +11,16 @@
   /* ID */
   
   #Apaar {
-    
     background-color: red; 
     height: 200px; 
     width: 150px;
-    margin-top: 60%;
-    margin-left: 50%;
     border: 5px solid black; 
     color: black; 
     font-family: "Playwrite HU", cursive;
-    
+    text-align: center;
+    margin: 0 auto;
   }
+  
   
   .gradient-box {
       background: linear-gradient(to right, #ff7e5f, #feb47b);
