--- a/style.css
+++ b/style.css
@@ -12,15 +12,13 @@
   
   #Apaar {
     background-color: red; 
-    height: 200px; 
-    width: 150px;
+    padding: 20px;
     border: 5px solid black; 
     color: black; 
     font-family: "Playwrite HU", cursive;
     text-align: center;
-    margin: 0 auto;
   }
-  
+
   
   .gradient-box {
       background: linear-gradient(to right, #ff7e5f, #feb47b);
